<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cn.edu.xjtu.se.bookgamma.AddBookActivity">



    <TextView
        android:id="@+id/tv_bookname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx_bookname"
        android:textSize="24sp"/>
    <EditText
        android:id="@+id/et_bookname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_bookname"/>
    <TextView
        android:id="@+id/tv_pages"
        android:layout_marginTop="40dp"
        android:layout_below="@id/tv_bookname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx_pages"
        android:textSize="24sp"/>
    <EditText
        android:id="@+id/et_pages"
        android:layout_alignTop="@id/tv_pages"
        android:layout_toRightOf="@id/tv_pages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/iv_bookimage"
        android:layout_below="@id/et_pages"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/choose"/>

    <Button
        android:id="@+id/btn_addbook"
        android:layout_below="@id/iv_bookimage"
        android:layout_marginTop="20dp"
        android:text="@string/btn_save"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>