...
    <string name="create">生成</string>
    <string name="scan_failed">扫描失败</string>
    <string name="bottom_hint">建议与镜头保持10CM距离，尽量避免逆光和阴影</string>
    <string name="top_hint">将条形码或二维码置于取景框内系统会自动扫描</string>
    <string name="cancel">取消</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="button_ok">确定</string>
    <string name="button_later">以后再说</string>
    <string name="msg_loading">正在加载数据…</string>
    <string name="msg_no_book">很抱歉，没有这本书的资料</string>
    <string name="msg_internet_error">网络连接出错</string>
    <string name="title_activity_book_list">BookListActivity</string>
    <string name="label_add_book">添加书籍</string>
...
